test/files/invalid/rpc_service_as_type.fbs
table Foo {
  x: Bar;
}

rpc_service Bar {}